Mon Mar 29 10:51:54 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/regex.h, htlib/regex.c: Include glibc versions of the
	regex functions to override possibly buggy system versions.

	* htlib/Makefile.in: Use them.

	* htfuzzy/EndingsDB.cc: Use glibc regex functions instead of rx
	for massive speedups on non-English affix files. 

	* configure, configure.in: Use the system timegm function if present.
	Don't configure rx since we don't use it any more. Don't worry
	about tsort since that was only needed for rx.

	* Makefile.in, Makefile.config.in: Ignore the rx directory if present.

Thu Mar 25 12:24:18 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/long.html, installdir/short.html: Remove backslashes 
	before quotes in HTML versions of the builtin templates.

	* Makefile.in: Add long.html & short.html to COMMONHTML list, so
	they get installed in common_dir.

Thu Mar 25 11:45:59 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch), htcommon/defaults.cc,
	htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Add date_format attribute suggested by Marc Pohl.

Thu Mar 25 09:49:33 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch): Avoid segfault when DocAnchors
	list has too few entries for current anchor number.

Wed Mar 24 12:20:02 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/main.cc (main): Call HtWordType::Initialize.  (Missed this
	one yesterday.  Oops!)

Tue Mar 23 17:11:46 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* backport Hans-Peter Nilsson's suite of changes for HtWordType
	and extra_word_characters support, to 3.1.2...

	* htlib/HtWordType.h (class HtWordType): New.
	* htlib/HtWordType.cc: New.
	* htlib/Makefile.in (OBJS): Add HtWordType.o

	* htdoc/attrs.html: Document attribute extra_word_characters.
	* htdoc/cf_byprog.html: Ditto.
	* htdoc/cf_byname.html: Ditto.
