@@ -1,3 +1,9 @@
+Mon Mar 29 12:53:17 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htlib/HtWordType.h (HtIsWordChar): Avoid matching 0 when using
+	strchr.
+	(HtIsStrictWordChar): Ditto.  (Patch from Hans-Peter Nilsson)
+
 Mon Mar 29 10:51:54 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htlib/regex.h, htlib/regex.c: Include glibc versions of the
